# stenographer

./: .fledgeignore  .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  README.md  pyproject.toml  release.json
.claude/: fledge-adapter.md  team-loop.md
.claude/agents/: fledge-brooder.md  fledge-context-scout.md  fledge-forager.md  fledge-incubator.md  fledge-skua.md
.claude/skills/: fledge-interrogate  fledge-orchestrate
.fledge/: scaffold.json
.fledge/molt/: FTHR-001.md  FTHR-002.md  FTHR-003.md  FTHR-004.md  FTHR-005.md  FTHR-006.md  FTHR-007.md  FTHR-008.md  FTHR-009.md  FTHR-010.md  FTHR-011.md  FTHR-012.md  FTHR-013.md  FTHR-014.md  FTHR-015.md  FTHR-016.md  FTHR-017.md  FTHR-018.md  FTHR-019.md  FTHR-020.md  FTHR-021.md
.fledge/nest/: architecture.md  conventions.md  data-model.md  dependencies.md  domain.md  entry-points.md  index.md  modules.md  testing.md
.fledge/pluma/feathers/: FTHR-001-default-paragraph-pause-to-0.md  FTHR-002-config-surface-for-prompt-mode.md  FTHR-003-local-llm-http-client.md  FTHR-004-second-hotkey-mode-tagged-session-routing-to-the-local-llm-tracer-bullet.md  FTHR-005-distinct-per-stage-notifications-for-prompt-mode.md  FTHR-006-pitched-down-start-stop-cues-for-prompt-mode.md  FTHR-007-bump-version-to-0-8-0.md  FTHR-008-classify-connection-level-failures-as-llmerror.md  FTHR-009-prompt-mode-lazy-load-notification-and-llm-failure-cue-fixes.md  FTHR-010-prompt-mode-config-validation-and-cue-name-registration.md  FTHR-011-noise-floor-relative-tail-silence-gating-for-live-streaming.md  FTHR-012-self-diagnosing-run-stop-run-disable-error-and-transcribe-raw.md  (+9 more)
.githooks/: pre-commit
.github/workflows/: build-release-draft.yml  ci.yml  release-badge.yml  release.yml
packaging/: hook-sounddevice.py  install.sh  stenographer-completion.bash  stenographer.service.in  stenographer.spec
packaging/rthooks/: py_rth_portaudio.py
scripts/: build-and-install.sh  build.sh  download_model.py  gen_cues.py  install-hooks.sh  install.sh  reinstall.sh
spec/: 00-overview.md  01-hotkey.md  02-audio-capture.md  03-transcription.md  04-audio-feedback.md  05-text-output.md  06-clipboard.md  07-configuration.md  08-process-model.md  09-error-handling.md  10-packaging.md  11-ci-release.md  12-update.md  13-asset-retention.md
src/stenographer/: __init__.py  _parser.py  _version.py  bench.py  capabilities.py  cli.py  config.py  errors.py  live.py  llm.py  notification.py  session.py  status.py  update.py  visualizer.py
tests/: conftest.py  test_bench.py  test_capabilities.py  test_capture.py  test_cli.py  test_cli_completion.py  test_cli_systemd.py  test_cli_update.py  test_clipboard.py  test_config.py  test_errors.py  test_feedback.py  test_formatter.py  test_gen_cues.py  test_hotkey.py  test_inject.py  test_lazy_model.py  test_live.py  test_llm.py  test_model_words.py  test_notification.py  test_packaging.py  test_session.py  test_status.py  test_streaming.py  test_transcription.py  test_update.py  test_visualizer.py  test_worker_cancel.py
(+36 files in other folders)
