[project]
name = "stenographer"
version = "0.8.8"
description = "Local, offline, Wayland push-to-talk / toggle dictation."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.14"
license-files = ["LICENSE"]
authors = [{ name = "stenographer contributors" }]

dependencies = [
    "sounddevice>=0.4.7",
    "numpy>=2.0",
    "faster-whisper>=1.0.0",
    "evdev>=1.4",
    "soundfile>=0.12",
    "packaging>=24.0",
    "certifi>=2024.0",
    "huggingface_hub>=0.23",
    "argcomplete>=3.5",
    "PyGObject>=3.50",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
build = [
    "pyinstaller>=6.10",
]

[project.scripts]
stenographer = "stenographer.cli:main"

[project.urls]
Homepage = "https://github.com/Harrison-Blair/stenographer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stenographer"]
include = [
    "src/stenographer/assets/sounds/*.wav",
    "src/stenographer/assets/sounds/*.ogg",
    "src/stenographer/assets/icons/*.png",
    "src/stenographer/assets/fonts/*.ttf",
    "src/stenographer/assets/fonts/*-OFL.txt",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "integration: opt-in tests that touch the user's environment (clipboard, real audio). Set STENOGRAPHER_INTEGRATION=1 to run.",
]
